# blog_it

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
posts/: hello_world.md  learning_rust.md  now.md
site/: .gitignore
site/css/: main.css  post.css
src/: main.rs  parser.rs
templates/: 404.html  home.html  post.html  posts.html
