[package]
name = "blog_it"
version = "0.1.0"
edition = "2021"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["unstable-locales"] }
regex = "1.10.2"
